# sigma-detection-as-code

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DETECTIONS.md
rules/windows/: proc_creation_win_certutil_download.yml  proc_creation_win_mshta_remote_payload.yml  proc_creation_win_powershell_encoded.yml  proc_creation_win_rundll32_javascript.yml  proc_creation_win_schtasks_persistence.yml  proc_creation_win_wmic_process_call_create.yml  process_access_win_lsass_dump.yml  registry_set_win_run_key_persistence.yml
sigmatools/: __init__.py  cli.py  convert.py  coverage.py  loader.py  matcher.py  validate.py
tests/: test_convert.py  test_detections.py  test_matcher.py  test_rules_valid.py
tests/cases/: proc_creation_win_certutil_download.yml  proc_creation_win_mshta_remote_payload.yml  proc_creation_win_powershell_encoded.yml  proc_creation_win_rundll32_javascript.yml  proc_creation_win_schtasks_persistence.yml  proc_creation_win_wmic_process_call_create.yml  process_access_win_lsass_dump.yml  registry_set_win_run_key_persistence.yml
